fix(diagnostics): make a read that writes need an exclusive lock
SelfGuard's lockset judged every read as a read, so readers holding
one shared read lock counted as guarded even when their reads wrote
the instance. Two shapes were missed: Calendar gets under a
ReentrantReadWriteLock read lock after a set(), where the first get
recomputes the time and every field into the instance while the other
readers read them, and gets on an access-ordered LinkedHashMap (the
usual LRU cache) under one read lock, where every get relinks the
entry. #787 found this without causing it.

Treating those reads as writes outright is what the first #787 draft
did, and it reported gets under one read lock on a calendar nothing
mutated. So the detectors now record a read as a write only when they
know it writes:

- CalendarDetector keeps, per calendar, whether a recorded set or add
  left fields to recompute. The first get after one counts as a write
  and consumes it; later gets read. A calendar starts complete, as
  getInstance() returns one.
- CacheConcurrencyDetector.recordGet and SharedCollectionDetector's
  get/getOrDefault reads count as writes on a LinkedHashMap known to
  be access-ordered. The order is the private accessOrder field. It is
  read with trySetAccessible only when java.util is already open to the
  library; nothing opens it. When it reads insertion order, readWrites
  stops counting that map's gets as writes for the round rule, so it
  gets the #787 improvement. An unknown order keeps both old verdicts.

Red before the fix:

  CalendarDetectorTest.getsUnderOneReadLockAfterASetAreReported:264
  ... expected: <true> but was: <false>
  AccessOrderedMapReadLockTest.withJavaUtilOpenOnlyAnAccessOrderedMapsGetsNeedAnExclusiveLock:35
  ... expected: <true> but was: <false>

The second runs its scenarios in a child JVM started with --add-opens
java.base/java.util=ALL-UNNAMED, and again in the test JVM, which does
not open java.util, pinning that an unknown order changes nothi